--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,40 +1,113 @@
+/* font of web app */
+html {
+	font: normal normal normal 1em/1.25 "Open Sans",sans-serif
+}
+
+/* background of the page */
 body {
 	margin: 0;
 	padding: 0;
-	background-color: #aaa;
+	background: url('/img/seamless_paper_texture.png') repeat scroll 0 0 #eaeaea;
+	color: #4d4d4d;
 }
 
-ul {
+/* blue line */
+.tasks-list:before {
+	content: "";
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 45px;
+	border-left: 0.5px solid #03C9E5;
+	border-right: 0.5px solid #03C9E5;
+	width: 2px;
+	z-index: 2;
+}
+
+/* styling our tasks list */
+.tasks-list {
+	background: none no-repeat scroll 0 0 rgba(255, 255, 255, 0.8);
+	box-shadow: 0px 5px 4px 0 rgba(0, 0, 0, 0.3);
+	position: relative;
+	margin: 130px auto 30px;
+	width: 530px;
+}
+
+.tasks-list input::-moz-placeholder {
+	color: #a9a9a9;
+	font-style: italic;
+}
+
+/* The title */
+h1 {
+	position: absolute;
+	top:-100px;
+	margin:0;
+	text-align:center;
+	width: 100%;
+	font-family: Dosis, sans-serif;
+	font-size: 3em;
+	color: rgba(255, 255, 255, 0.3);
+	text-shadow: -1px -1px rgba(0, 0, 0, 0.2)
+}
+
+#header:before {
+	content: "";
+	background-color: #0A3F6F;
+	border-bottom: 1px solid #052F55;
+	border-top-left-radius: 1px;
+	border-top-right-radius: 1px;
+	height: 15px;
+	position: absolute;
+	z-index: 2;
+	width: 100%;
+	top: 0;
+}
+
+#header {
+	padding-top: 15px;
+	border-radius: inherit;
+}
+
+#new-task {
+	background-color: rgba(0, 0, 0, 0.02);
+	font-size: 1.3em;
+	border: medium none;
+	box-shadow: none;
+	box-sizing: border-box;
+	width: 100%;
+	position: relative;
+	padding: 16px 16px 16px 70px;
+}
+
+#main ul {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
 }
 
-li {
-	border-bottom: 1px solid #c4c4c4;
-	margin: 0px 5px;
-}
-
-li input {
-	margin: 0px;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-}
-
-li label {
-	margin-left: 40px;
-	padding: 10px 10px;
-	display: block;
-}
-
-h1 {
-	margin-top: 0px;
-}
-
-.tasks-list {
-	width: 300px;
-	margin: 0 auto;
-	background-color: #fff;
+#main ul li {
 	position: relative;
+	border-bottom: 1px dotted #bbb;
+}
+
+#main ul label {
+	display: block;
+	margin-left: 45px;
+	padding: 15px 60px 15px 15px;
+	font-size: 1.2em;
+}
+
+#main ul input[type='checkbox']{
+	position: absolute;
+	top: 17px;
+	margin: 0 auto;
+	width: 45px;
+}
+.hidden {
+	display: none;
+}
+
+#footer {
+	display:none;
 }
