--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,6 +114,49 @@ h1 {
 	display: none;
 }
 
+#footer:before {
+	position:absolute;
+	height: 50px;
+	left: 2px;
+	right: 2px;
+	bottom: -5px;
+	border-left: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	content: "";
+	background-color: rgba(0, 0, 0, 0.02);
+	z-index: -1;
+}
+
 #footer {
-	display:none;
+	position:absolute;
+	left: 0;
+	right: 0;
+	bottom: -30px;
+	height: 20px;
+	text-align: center;
+	font-size: 0.9em;
+}
+
+#filters {
+	position: absolute;
+	left: 0;
+	right: 0;
+	list-style: none outside none;
+	padding: 0;
+	margin: 0;
+}
+
+#filters li {
+	display: inline;
+}
+
+#filters li a {
+	color: #104050;
+	margin-right: 8px;
+	text-decoration:none
+}
+
+#filters li a.selected {
+	font-weight: bold;
 }
