--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,9 @@ html
 			section#main
 				ul
 			footer#footer
-				p= 'Footer'
+				ul#filters
+					li: a(href="" class="selected") All
+					li: a(href="") Active
+					li: a(href="") Completed
 	script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js', type='text/javascript')
 	script(src='/js/main.js', type='text/javascript')
